--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top"><img src ="assets/img/download-removebg-preview (4).png" width="50px"> ADEFRID SUTOPO</a>
+            <a class="navbar-brand" href="#page-top"><img src ="assets/img/download-removebg-preview (4).png" width="50px"> M.DEVFAN ADEFRID SUTOPO</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-gray text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
